--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,7 +2,7 @@
   <p style="color: green"><%= notice %></p>
 
   <h1>Courses</h1>
-
+  <small>Welcome <%= current_user.email %></small>
   <table class="table">
     <thead>
       <th>Prefix</th>
