--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
 <div class="container pt-5">
-  <h1><i class="bi bi-gem" style="color: red;"></i> Comming soon</h1>
-  <p>Site is under construction</p>
+  <h1 class="text-center py-5"><i class="bi bi-amd text-warning"></i> TutorME</h1>
+  <div class="d-flex">
+    <%= link_to "Courses", courses_path, class: "flex-grow-1 flex-shrink-1 m-5 p-5 text-center text-light bg-dark" %>
+    <%= link_to "Tutors", tutors_path, class: "flex-grow-1 flex-shrink-1 m-5 p-5 text-center text-light bg-dark" %>
+  </div>
 </div>
