--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,14 @@
               <%= link_to 'Tutors', tutors_path, class: "nav-link" %>
             </li>
           </ul>
+          <% if signed_in? %>
+            Welcome <%= current_user.email %>
+            <%= button_to 'Sign out', sign_out_path, method: :delete, class: "ms-2 nav-link" %>
+          <% else %>
+            <%= link_to 'Sing in', sign_in_path, class: "ms-2 nav-link" %>
+            <%= link_to 'Sing up', sign_up_path, class: "ms-2 nav-link" %>
+          <% end %>
+
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
