--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,9 +1,13 @@
-<h1>New appointment</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <h1 class="mt-4">New Appointment</h1>
 
-<%= render "form", appointment: @appointment %>
+      <%= render "form", appointment: @appointment %>
 
-<br>
-
-<div>
-  <%= link_to "Back to appointments", appointments_path %>
+      <div class="mt-4">
+        <%= link_to "Back to Appointments", appointments_path, class: "btn btn-secondary" %>
+      </div>
+    </div>
+  </div>
 </div>
