--- a/app/views/tutors/_tutor.html.erb
+++ b/app/views/tutors/_tutor.html.erb
@@ -1,17 +1,20 @@
 <div id="<%= dom_id tutor %>">
-  <p>
-    <strong>Name:</strong>
-    <%= tutor.name %>
-  </p>
-
-  <p>
-    <strong>Email:</strong>
-    <%= tutor.email %>
-  </p>
-
-  <p>
-    <strong>Bio:</strong>
-    <%= tutor.bio %>
-  </p>
-
+  <div class="row">
+    <p>
+      <strong>Name:</strong>
+      <%= tutor.name %>
+    </p>
+  </div>
+  <div class="row">
+    <p>
+      <strong>Email:</strong>
+      <%= tutor.email %>
+    </p>
+  </div>
+  <div class="row">
+    <p>
+      <strong>Bio:</strong>
+      <%= tutor.bio %>
+    </p>
+  </div>
 </div>
