--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New tutor</h1>
+<h1 class="text-center">New tutor</h1>
 
 <%= render "form", tutor: @tutor %>
 
 <br>
 
 <div>
-  <%= link_to "Back to tutors", tutors_path %>
+  <%= link_to "Back to tutors", tutors_path, class:'btn btn-primary mb-2' %>
 </div>
