--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @tutor %>
 
 <div>
-  <%= link_to "Edit this tutor", edit_tutor_path(@tutor) %> |
-  <%= link_to "Back to tutors", tutors_path %>
+  <%= link_to "Edit this tutor", edit_tutor_path(@tutor), class: 'btn btn-success' %> |
+  <%= link_to "Back to tutors", tutors_path, class: 'btn btn-primary' %>
 
-  <%= button_to "Destroy this tutor", @tutor, method: :delete %>
+  <%= button_to "Destroy this tutor", @tutor, method: :delete, class: 'btn btn-warning' %>
 </div>
