--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,20 +1,20 @@
 <div id="<%= dom_id course %>">
-  <p>
+  <p class="fs-4 mt-4">
     <strong>Prefix:</strong>
     <%= course.prefix %>
   </p>
 
-  <p>
+  <p class="fs-4">
     <strong>Num:</strong>
     <%= course.num %>
   </p>
 
-  <p>
+  <p class="fs-4">
     <strong>Title:</strong>
     <%= course.title %>
   </p>
 
-  <p>
+  <p class="fs-4">
     <strong>Description:</strong>
     <%= course.description %>
   </p>
