--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing course</h1>
+<h1 class="mt-3 mb-4 text-center">Editing course</h1>
 
 <%= render "form", course: @course %>
 
 <br>
 
-<div>
-  <%= link_to "Show this course", @course %> |
+<div class="mb-4">
+  <%= link_to "Show this course", @course %> <span class="px-2">|</span>
   <%= link_to "Back to courses", courses_path %>
 </div>
