--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New course</h1>
+<h1 class="mt-3 mb-4 text-center">New course</h1>
 
 <%= render "form", course: @course %>
 
 <br>
 
-<div>
+<div class="mb-4">
   <%= link_to "Back to courses", courses_path %>
 </div>
