--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,10 +1,15 @@
-<p style="color: green"><%= notice %></p>
+
+<% if notice.present? then %>
+<div class="alert alert-success my-4 text-center">
+  <p class="m-0 fs-4"><%= notice %></p>
+</div>
+<% end %>
 
 <%= render @course %>
 
-<div>
-  <%= link_to "Edit this course", edit_course_path(@course) %> |
+<div class="">
+  <%= link_to "Edit this course", edit_course_path(@course) %> <span class="px-2">|</span>
   <%= link_to "Back to courses", courses_path %>
 
-  <%= button_to "Destroy this course", @course, method: :delete %>
+  <%= button_to "Destroy this course", @course, method: :delete, class: "btn btn-danger mt-3 mb-4" %>
 </div>
