--- a/app/views/passwords/create.html.erb
+++ b/app/views/passwords/create.html.erb
@@ -1,3 +1,12 @@
 <div id="clearance" class="password-reset">
+  <style>
+    background-color: #f5f5f5;
+    border: 1px solid #dddddd;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    color: black;
+    font-family: 'Arial', sans-serif;
+    font-size: 16px;
+  </style>
   <p><%= t(".description") %></p>
 </div>
